--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,28 +1,28 @@
-name: Scrape and Send to Telegram
+name: Scrape IPOT Market Live
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # setiap 15 menit
-  workflow_dispatch:       # bisa dijalankan manual dari GitHub UI
+    - cron: '*/15 * * * *'  # Setiap 15 menit
+  workflow_dispatch:        # Bisa dijalankan manual juga
 
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        pip install playwright requests
+        pip install -r requirements.txt
         playwright install chromium
 
-    - name: Run scraper
+    - name: Jalankan scraper
       env:
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
