--- a/.github/workflows/scrape-indeks-kurs.yml
+++ b/.github/workflows/scrape-indeks-kurs.yml
@@ -2,31 +2,30 @@ name: Scrape Indeks & Kurs IPOT
 
 on:
   schedule:
-  - cron: '* * * * *'
+  - cron: '*/1 * * * *'  # tiap menit (hati-hati rate limit)
 
-  workflow_dispatch:
+# atau jika ingin hanya jam kerja (misal Senin-Jumat 08:00–16:00 WIB):
+# - cron: '0-9/1 * * * 1-5'  (ini diatur dalam UTC)
 
 jobs:
-  run-script:
+  scrape-indeks-kurs:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: 3.10
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           pip install -r requirements.txt
           playwright install --with-deps
 
-      - name: Run scraper
+      - name: Run Scraper
+        run: python scrap_indeks_kurs.py
         env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
-        run: |
-          python scrap_indeks_kurs.py
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
