--- a/.github/workflows/scrape-indeks-kurs.yml
+++ b/.github/workflows/scrape-indeks-kurs.yml
@@ -2,30 +2,30 @@ name: Scrape Indeks & Kurs IPOT
 
 on:
   schedule:
-  - cron: '*/1 * * * *'  # tiap menit (hati-hati rate limit)
-
-# atau jika ingin hanya jam kerja (misal Senin-Jumat 08:00–16:00 WIB):
-# - cron: '0-9/1 * * * 1-5'  (ini diatur dalam UTC)
+    - cron: '* * * * *'  # Setiap menit (testing)
+  workflow_dispatch:      # Bisa dijalankan manual juga
 
 jobs:
-  scrape-indeks-kurs:
+  scrape-and-send:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
           pip install -r requirements.txt
           playwright install --with-deps
 
-      - name: Run Scraper
-        run: python scrap_indeks_kurs.py
+      - name: Run scraping script
         env:
-          from dotenv import load_dotenv
-load_dotenv()
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          python scrap_indeks_kurs.py
