--- a/.github/workflows/scrape-indeks-kurs.yml
+++ b/.github/workflows/scrape-indeks-kurs.yml
@@ -2,30 +2,29 @@ name: Scrape Indeks & Kurs IPOT
 
 on:
   schedule:
-    - cron: '* * * * *'  # Setiap menit (testing)
-  workflow_dispatch:      # Bisa dijalankan manual juga
+    - cron: '*/5 * * * *'  # Tiap 5 menit
+  workflow_dispatch:
 
 jobs:
-  scrape-and-send:
+  scrape:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          playwright install --with-deps
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        playwright install chromium
 
-      - name: Run scraping script
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          python scrap_indeks_kurs.py
+    - name: Run scraper
+      env:
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+      run: python scrap_indeks_kurs.py
