--- a/.github/workflows/scrape-indeks-kurs.yml
+++ b/.github/workflows/scrape-indeks-kurs.yml
@@ -1,8 +1,8 @@
-name: Scrape Indeks & Kurs IPOT
+name: Scrape Indeks & Kurs
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Tiap 5 menit
+    - cron: '*/1 * * * *'  # Setiap menit
   workflow_dispatch:
 
 jobs:
@@ -10,17 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
     - name: Setup Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        pip install playwright python-dotenv requests
         playwright install chromium
 
     - name: Run scraper
