--- a/.github/workflows/scrape-indeks-kurs.yml
+++ b/.github/workflows/scrape-indeks-kurs.yml
@@ -1,30 +1,26 @@
 name: Scrape Indeks & Kurs
 
+
+# Trigger real-time
 on:
-  schedule:
-    - cron: '*/1 * * * *'  # Setiap menit
-  workflow_dispatch:
+  workflow_dispatch:     # Bisa dijalankan manual dari tab Actions
+  push:                  # Auto-trigger saat kamu push kode
+    branches: [main]     # Sesuaikan dengan branch utama kamu
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install playwright python-dotenv requests
-        playwright install chromium
-
-    - name: Run scraper
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install deps
+        run: |
+          pip install -r requirements.txt
+          playwright install chromium --with-deps
+  
+- name: Run scraper
       env:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
