--- a/.github/workflows/scrape-indeks-kurs.yml
+++ b/.github/workflows/scrape-indeks-kurs.yml
@@ -20,6 +20,13 @@ jobs:
           pip install -r requirements.txt
           playwright install chromium --with-deps
 
+      - name: Upload screenshot debug
+  if: always()
+  uses: actions/upload-artifact@v4
+  with:
+    name: page-screenshot
+    path: debug/page.png
+
       - name: Run scraper
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
