--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 TELEGRAM_BOT_TOKEN=7249080183:AAEkMHdJ-fL0mI_LRqXT6UtJ2-DS5QI4j8M
 TELEGRAM_CHAT_ID=178798282
+STOCKBIT_USERNAME=jhonni.cool@gmail.com
+STOCKBIT_PASSWORD=jh0nn10614
