--- a/.github/workflows/scrap_stockbit.yml
+++ b/.github/workflows/scrap_stockbit.yml
@@ -1,28 +1,34 @@
-name: Stockbit Trending ➜ Telegram
+name: Scrape Stockbit Trending
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "0 9 * * 1-5"   # 09:00 UTC Mon-Fri, adjust to your TZ
+    - cron: '5 2 * * 1-5'  # Setiap hari kerja jam 09:05 WIB (02:05 UTC)
+  workflow_dispatch:  # Bisa dijalankan manual juga
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: '3.10'
 
-      - name: Install deps
+      - name: Install Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          playwright install chromium --with-deps
+          playwright install chromium
 
-      - name: Run scraper
+      - name: Jalankan Scraper Stockbit Trending
         env:
-          STOCKBIT_EMAIL:      ${{ secrets.STOCKBIT_EMAIL }}
-          STOCKBIT_PASSWORD:   ${{ secrets.STOCKBIT_PASSWORD }}
-          TELEGRAM_BOT_TOKEN:  ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID:    ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python scrap_stockbit_trending.py
+          STOCKBIT_USERNAME: ${{ secrets.STOCKBIT_USERNAME }}
+          STOCKBIT_PASSWORD: ${{ secrets.STOCKBIT_PASSWORD }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          python scrap_trending_stockbit.py
