--- a/.github/workflows/scrap_stockbit.yml
+++ b/.github/workflows/scrap_stockbit.yml
@@ -31,4 +31,4 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          python scrap_trending_stockbit.py
+          python scrap_stockbit_trending.py
